--- a/src/components/Body/ScientistCard/ScientistCard.css
+++ b/src/components/Body/ScientistCard/ScientistCard.css
@@ -1,12 +1,11 @@
 .scientist-card{
-    background-color: #a8dacb;
+    background-color: #46878f79;
     text-align: center;
     padding: 10px;
     border-radius: 10px;
 }
 .scientist-card:hover{
-    background-color: #5fcfae;
-    
+    box-shadow: 0px 0px 10px 2px #000000;
 }
 .scientist-card img{
     width: 150px;
@@ -23,7 +22,14 @@
     border-radius: 5px;
     cursor: pointer;
 }
+.scientist-card button:hover{
+    background-color: #065b5f;
+
+}
 
 .scientist-card p{
-    padding: 7px 0;
+    padding: 5px 0;
+    font-size: 20px;
+    text-align: start;
+
 }
