--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,16 @@
 .header{
     text-align: center;
     width: 95%;
-    background-color: #5C588E;
+    background-color: #5c588e9c;
     margin: 0 auto;
     padding: 15px;
     border-radius: 10px;
     
 }
 .header h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-variant: small-caps;
-    color: #d6cee7;
 }
 .header p{
-    color: white;
     font-weight: 400;
 }
