--- a/src/components/Body/ScientistCard/ScientistCard.css
+++ b/src/components/Body/ScientistCard/ScientistCard.css
@@ -1,3 +1,4 @@
+/* Card Style  */
 .scientist-card{
     background-color: #46878f79;
     text-align: center;
@@ -7,6 +8,8 @@
 .scientist-card:hover{
     box-shadow: 0px 0px 10px 2px #000000;
 }
+
+/* Card inside style  */
 .scientist-card img{
     width: 150px;
     height: 150px;
@@ -26,7 +29,6 @@
     background-color: #065b5f;
 
 }
-
 .scientist-card p{
     padding: 5px 0;
     font-size: 20px;
