--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,4 @@
+/* Header Style  */
 .header{
     text-align: center;
     width: 95%;
@@ -7,6 +8,8 @@
     border-radius: 10px;
     
 }
+
+/* Header text style  */
 .header h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-variant: small-caps;
